--- a/style.css
+++ b/style.css
@@ -1,24 +1,27 @@
 *{
+    box-sizing: border-box;
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: "roboto", sans-serif;
 }
 
 body{
-    min-height: 200vh;
-    background-size: cover;
-    background-position: center;
-    background-image: url("photos/main-background.jpg");
-    overflow: auto;
+    min-height: 100vh;
+    background-color: rgb(102, 107, 107);
+}
+
+::selection{
+    background: Highlight;
+    color: HighlightText;
 }
 
 .header{
-
+    position: sticky;
     top: 0;
-    left: 0;
+    left:0;
     width: 100%;
-    padding: 50px 150px;
+    padding: 20px 100px;
+    background: rgb(42, 42, 43);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -26,26 +29,21 @@ body{
 }
 
 .logo{
-    font-size: 30px;
-    color: black;
+    font-size: 32px;
+    color:#fff;
+    font-weight: 500;
     text-decoration: none;
-    font-weight: 450;
+    font-style: italic;
     pointer-events: none;
-
-}
-
-#nav-background{
-    background-color: #488ebd;
-    height: 25px;
 }
 
 .navbar a{
     position: relative;
     font-size: 18px;
-    color: black;
-    font-weight: 500;
+    color: #fff;
+    font-weight: 300;
     text-decoration: none;
-    margin-left: 40px;
+    margin-left:40px;
 }
 
 .navbar a::before{
@@ -55,128 +53,59 @@ body{
     left: 0;
     width: 0;
     height: 3px;
-    background-color: #0e57b6ce;
+    background-color: #fff;
     transition: .3s;
+
 }
 
 .navbar a:hover::before{
     width: 100%;
 }
 
+.hero-container{
+    display: flex;
+    max-width: 1920px;
+}
+#hero-text{
+    padding-left: 25rem;
+    padding-top: 15rem;
+}
+
+#hero-img{
+margin-left: 2rem;
+margin-top: 8rem;
+}
+
 #portrait{
     clip-path: circle();
-    height:250px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+    width: 525px;
+    height: 375px;
 }
 
-#main-container{
-    padding-top: 15em;
+.hero-header{
+    width: 25rem;
+    font-size: 24px;
+    font-weight: 400;
 }
 
-#main-text{
-    padding-top: 5rem;
-    font-weight: 500;
-    font-size: 20px;
-    margin: auto;
-    width: 50%;
+#hero-header-one{
+    font-size: 4rem;
+    font-weight: 300;
 }
 
-.container{
-    margin-top: 400px;
+#hero-header-two{
+    font-size: 25px;
+    font-weight: 300;
 }
 
-#about-me-pic{
-    float: left;
-    width: 225px;
-    height: 350px;
-    margin-left: 60px;
-    margin-right: 20px;
+#nav-icon a{
+    color: #fff;
+    text-decoration: none;
+    padding-left: 1.5px;
+    padding-right: 13px;
+    font-size: 25px;
 }
 
-/* The "about-me" IDs serve as an anchor for when the user clicks on the navlinks */
-
-#about-me-heading{
-    margin: auto;
-    text-align: center;
+#nav-icon a:hover{
+    color: rgb(153, 141, 141);
 }
-
-#about-me-skills{
-    margin: auto;
-    text-align: center;
-}
-
-#about-me-projects{
-    margin: auto;
-    text-align: center;
-}
-
-#about-me-contact{
-    margin: auto;
-    text-align: center;
-}
-
-#about-me-word{
-    font-size: 20px;
-    font-weight: 500;
-    padding-top: 20px;
-}
-
-/*Use for centering text */
-#skills-text{
-    text-align: center;
-    font-size: 20px;
-    padding-top: 20px;
-}
-
-.skills-logo-temp{
-
-    width: 175px;
-    height: 170px;
-    margin: 50px;
-}
-.row{
-    margin: auto;
-    width: 50%;
-}
-
-.row::after{
-    content: "";
-    clear: both;
-    display: table;
-}
-
-input[type=text], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
-  }
-  
-input[type=submit] {
-    background-color: #32a2ec;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-input[type=submit]:hover {
-    background-color: #0665d1af;
-  }
-  
-.mail-container {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-    margin: auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    width: 34%;
-  }
