--- a/style.css
+++ b/style.css
@@ -7,12 +7,7 @@
 
 body{
     min-height: 100vh;
-    background-color: rgb(102, 107, 107);
-}
-
-::selection{
-    background: Highlight;
-    color: HighlightText;
+    background-color: #eee;
 }
 
 .header{
@@ -21,7 +16,7 @@ body{
     left:0;
     width: 100%;
     padding: 20px 100px;
-    background: rgb(42, 42, 43);
+    background: #1b1b68;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -33,7 +28,6 @@ body{
     color:#fff;
     font-weight: 500;
     text-decoration: none;
-    font-style: italic;
     pointer-events: none;
 }
 
@@ -64,7 +58,8 @@ body{
 
 .hero-container{
     display: flex;
-    max-width: 1920px;
+    max-width: 1280px;
+    margin-bottom: 20rem;
 }
 #hero-text{
     padding-left: 25rem;
@@ -72,8 +67,8 @@ body{
 }
 
 #hero-img{
-margin-left: 2rem;
-margin-top: 8rem;
+    margin-left: 2rem;
+    margin-top: 8rem;
 }
 
 #portrait{
@@ -83,9 +78,10 @@ margin-top: 8rem;
 }
 
 .hero-header{
-    width: 25rem;
+    width: 45rem;
     font-size: 24px;
-    font-weight: 400;
+    font-weight: 600;
+    color: #3636b4;
 }
 
 #hero-header-one{
@@ -99,7 +95,7 @@ margin-top: 8rem;
 }
 
 #nav-icon a{
-    color: #fff;
+    color: #1b1b68;
     text-decoration: none;
     padding-left: 1.5px;
     padding-right: 13px;
@@ -107,5 +103,55 @@ margin-top: 8rem;
 }
 
 #nav-icon a:hover{
-    color: rgb(153, 141, 141);
+    color: #3f3fcc;
+}
+
+.wrapper{
+    max-width: 1280px;
+    margin: auto;
+    margin-bottom: 20rem;
+}
+
+#about-me-header{
+    text-align: center;
+    margin-bottom: 1rem;
+    padding-top: 10rem;
+}
+
+#about-me-pic{
+    width: 250px;
+    margin-right: 2.5rem;
+    border: 2px solid #000000;
+}
+
+.about-wrapper{
+    display: flex;
+    font-size: 20px;
+    font-weight: 300;
+}
+
+#skills-header{
+    text-align: center;
+    margin-bottom: 1rem;
+    padding-top: 11rem;
+}
+
+.skills-wrapper{
+    width: 50%;
+    font-size: 20px;
+    font-weight: 300;
+    margin: auto;
+}
+
+#projects-header{
+    text-align: center;
+    margin-bottom: 1rem;
+    padding-top: 11rem;
+}
+
+.project-wrapper{
+    width: 50%;
+    font-size: 20px;
+    font-weight: 300;
+    margin: auto;
 }
