--- a/style.css
+++ b/style.css
@@ -143,6 +143,11 @@ body{
     margin: auto;
 }
 
+.skills-img {
+    width: 150px;
+    padding-top: 1rem;
+}
+
 #projects-header{
     text-align: center;
     margin-bottom: 1rem;
@@ -154,4 +159,20 @@ body{
     font-size: 20px;
     font-weight: 300;
     margin: auto;
+}
+
+.footer {
+    background-color: #1b1b68;
+}
+
+.footer p {
+    color: #eee;
+}
+
+#footer-icon a{
+    color: #eee;
+    text-decoration: none;
+    padding-left: 1.5px;
+    padding-right: 13px;
+    font-size: 25px;
 }
