--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ body{
     padding-top: 11rem;
 }
 
-.project-wrapper{
+.project-wrapper {
     width: 50%;
     font-size: 20px;
     font-weight: 300;
@@ -163,16 +163,197 @@ body{
 
 .footer {
     background-color: #1b1b68;
-}
-
-.footer p {
+    display: grid;
+    font-size: 16px;
+    font-weight: 300;
     color: #eee;
+    gap: 5px;
+    text-align: center;
 }
 
-#footer-icon a{
+#footer-icon a {
     color: #eee;
     text-decoration: none;
-    padding-left: 1.5px;
-    padding-right: 13px;
-    font-size: 25px;
+    padding-right: 10px;
+    font-size: 22px;
+}
+
+#footer-icon a:hover {
+    color: #3f3fcc;
+}
+
+#button-begone {
+    visibility: hidden;
+}
+
+
+/* This applies when the screen size is 480px or less */
+@media only screen and (max-width: 480px) {
+    .header {
+        max-width: 480px;
+        width: 100%;
+        padding: 10px 0px 0px;
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: column;
+}
+    
+.logo {
+        font-size: 20px;
+        width: 300px;
+        padding-right: 5rem;
+}
+
+/*Keeps the navbar's link hidden until the user clicks on the
+    hamburger menu*/
+.navbar {
+        visibility:hidden;
+}
+
+.navbar-active {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        visibility: visible;
+        margin: auto;
+        width: 50%;
+        padding-bottom: 10px;
+}
+
+.navbar a{
+        font-size: 18px;
+        margin: auto;
+}
+
+.hero-container{
+        display: flex;
+        flex-direction: column-reverse;
+        max-width: 480px;
+        width: 100%;
+}
+
+#hero-text{
+        padding-left: 0px;
+        padding-top: 3rem;
+        margin: auto;
+        text-align: center;
+}
+    
+#hero-img{
+        margin: auto;
+        padding-top: 5rem;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+}
+    
+#portrait{
+        width: 275px;
+        height: 250px;
+}
+    
+.hero-header{
+        width: 100%;
+}
+    
+#hero-header-one{
+        font-size: 36px;
+}
+    
+#hero-header-two{
+        font-size: 21px;
+}
+    
+#nav-icon a{
+        font-size: 30px;
+}
+    
+.wrapper{
+        max-width: 390px;
+        margin: auto;
+        margin-bottom: 20rem;
+        display: flex;
+        flex-direction: column;
+}
+    
+#about-me-header{
+        text-align: center;
+        margin-bottom: 1rem;
+        padding-top: 12rem;
+}
+    
+#about-me-pic{
+        width: 200px;
+        height: 300px;
+        margin: auto;
+}
+    
+.about-wrapper{
+        font-size: 19px;
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+}
+
+.about-wrapper p {
+        margin: auto;
+        width: 85%;
+        padding-top: 2rem;
+}
+    
+#skills-header{
+        text-align: center;
+        margin-bottom: 1rem;
+        padding-top: 12rem;
+}
+    
+.skills-wrapper{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+}
+
+.skills-wrapper p {
+        width: 50%;
+        margin: auto;
+        padding-bottom: 5rem;
+}
+    
+.skills-img {
+        width: 150px;
+        padding-top: 1rem;
+        margin: auto;
+}
+    
+#projects-header{
+        text-align: center;
+        margin-bottom: 1rem;
+        padding-top: 12rem;
+}
+    
+.project-wrapper{
+        width: 100%;
+        font-size: 20px;
+        margin: auto;
+}
+
+.project-wrapper p {
+        width: 50%;
+        margin: auto;
+}
+    
+.footer {
+        max-width: 390px;
+        margin: auto;
+        width: 100%;
+}
+    
+#footer-icon a{
+        padding-right: 10px;
+        font-size: 22px;
+}
+
+#button-begone {
+        visibility:visible;
+}    
 }
