--- a/styles/style.css
+++ b/styles/style.css
@@ -16,11 +16,11 @@ body {
   left: 0;
   width: 100%;
   padding: 20px 100px;
-  background: #1b1b68;
   display: flex;
   justify-content: space-between;
   align-items: center;
   z-index: 100;
+  background: #1b1b68;
 }
 
 .logo {
@@ -92,8 +92,8 @@ body {
 }
 
 #nav-icon {
-    display: flex;
-    gap: 1.5rem;
+  display: flex;
+  gap: 1.5rem;
 }
 
 #nav-icon a {
@@ -193,27 +193,68 @@ body {
   visibility: hidden;
 }
 
+.sidebar {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  visibility: hidden;
+}
+
+.sidebar-active {
+  visibility: visible;
+  position: absolute;
+  top: 3.5rem;
+  left: 0.1rem;
+  z-index: 1;
+}
+
+.sidebar-mobile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  background-color: #1b1b68;
+}
+
+.sidebar-mobile a {
+  text-decoration: none;
+  display: flex;
+  gap: 20rem;
+  color: #eee;
+}
 /* This applies when the screen size is 480px or less */
 @media only screen and (max-width: 480px) {
   .header {
-    max-width: 480px;
+    padding: 0px;
+    flex-wrap: wrap;
+    background-color: transparent;
+  }
+  .header-container {
     width: 100%;
-    padding: 10px 0px 0px;
     display: flex;
-    justify-content: flex-start;
-    flex-direction: column;
+    background-color: #1b1b68;
   }
 
   .logo {
-    font-size: 20px;
-    width: 300px;
-    padding-right: 5rem;
+    font-size: initial;
+    width: 50%;
+    font-size: 1.2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .button-container {
+    width: 50%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
   }
 
   /*Keeps the navbar's link hidden until the user clicks on the
     hamburger menu*/
   .navbar {
-    visibility: hidden;
+    display: none;
   }
 
   .navbar-active {
@@ -232,17 +273,15 @@ body {
   }
 
   .hero-container {
-    display: flex;
     flex-direction: column-reverse;
-    max-width: 480px;
-    width: 100%;
   }
 
   #hero-text {
-    padding-left: 0px;
-    padding-top: 3rem;
-    margin: auto;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
   }
 
   #hero-img {
@@ -254,107 +293,72 @@ body {
   }
 
   #portrait {
-    width: 275px;
-    height: 250px;
+    width: 100%;
+    height: 350px;
+    margin-bottom: 1.5rem;
   }
 
   .hero-header {
-    width: 100%;
+    width: initial;
   }
 
   #hero-header-one {
     font-size: 36px;
+    display: flex;
+    align-items: center;
   }
 
   #hero-header-two {
-    font-size: 21px;
+    font-size: 18px;
   }
 
   #nav-icon a {
     font-size: 30px;
   }
 
-  .wrapper {
-    max-width: 390px;
-    margin: auto;
-    margin-bottom: 20rem;
-    display: flex;
-    flex-direction: column;
-  }
-
-  #about-me-header {
-    text-align: center;
-    margin-bottom: 1rem;
-    padding-top: 12rem;
-  }
-
   #about-me-pic {
     width: 200px;
     height: 300px;
-    margin: auto;
   }
 
   .about-wrapper {
     font-size: 19px;
-    flex-direction: column;
-    text-align: center;
-    width: 100%;
-  }
-
-  .about-wrapper p {
-    margin: auto;
-    width: 85%;
-    padding-top: 2rem;
-  }
-
-  #skills-header {
-    text-align: center;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 1rem;
     padding-top: 12rem;
   }
 
-  .skills-wrapper {
+  .about-wrapper-header {
+    padding-top: 1.2rem;
     width: 100%;
-    display: flex;
-    flex-direction: column;
   }
 
-  .skills-wrapper p {
-    width: 50%;
-    margin: auto;
-    padding-bottom: 5rem;
+  .about-wrapper-header p {
+    display: flex;
+    flex-wrap: wrap;
+    width: 75%;
+  }
+
+  .skills-wrapper-img {
+    justify-content: space-evenly;
   }
 
   .skills-img {
     width: 150px;
     padding-top: 1rem;
-    margin: auto;
-  }
-
-  #projects-header {
-    text-align: center;
-    margin-bottom: 1rem;
-    padding-top: 12rem;
   }
 
   .project-wrapper {
-    width: 100%;
     font-size: 20px;
-    margin: auto;
   }
 
   .project-wrapper p {
-    width: 50%;
-    margin: auto;
-  }
-
-  .footer {
-    margin: auto;
-    width: 100%;
+    width: 85%;
   }
 
   #footer-icon a {
-    padding-right: 10px;
     font-size: 22px;
   }
 
