--- a/styles/style.css
+++ b/styles/style.css
@@ -193,41 +193,12 @@ body {
   visibility: hidden;
 }
 
-.sidebar {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  visibility: hidden;
-}
-
-.sidebar-active {
-  visibility: visible;
-  position: absolute;
-  top: 3.5rem;
-  left: 0.1rem;
-  z-index: 1;
-}
-
-.sidebar-mobile {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 50%;
-  background-color: #1b1b68;
-}
-
-.sidebar-mobile a {
-  text-decoration: none;
-  display: flex;
-  gap: 20rem;
-  color: #eee;
-}
 /* This applies when the screen size is 480px or less */
 @media only screen and (max-width: 480px) {
   .header {
     padding: 0px;
     flex-wrap: wrap;
-    background-color: transparent;
+    top: -1px;
   }
   .header-container {
     width: 100%;
@@ -364,5 +335,43 @@ body {
 
   #button-begone {
     visibility: visible;
+  }
+
+  .sidebar {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    visibility: hidden;
+    height: 30px;
+  }
+
+  .sidebar-active {
+    visibility: visible;
+    transform: translateY(30px);
+    position: relative;
+    transition: transform 400ms ease-out;
+  }
+
+  .sidebar-mobile {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 100%;
+    position: absolute;
+    z-index: 1;
+    background-color: #1b1b68;
+  }
+
+  .sidebar-mobile a {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    background-color: #1b1b68;
+    color: #eee;
+    text-decoration: none;
+    font-size: 1.5rem;
+    padding: 10px;
   }
 }
